--- a/tacogator/package.json
+++ b/tacogator/package.json
@@ -9,10 +9,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@lekoarts/gatsby-theme-minimal-blog": "^2.2.9",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
     "gatsby": "^2.20.12",
-    "gatsby-theme-blog": "^1.4.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-live": "^2.2.2"
