--- a/tacogator/package.json
+++ b/tacogator/package.json
@@ -12,7 +12,10 @@
     "@lekoarts/gatsby-theme-minimal-blog": "^2.2.9",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.10",
     "gatsby": "^2.20.12",
+    "gatsby-plugin-layout": "^1.2.3",
+    "gatsby-plugin-material-ui": "^2.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-live": "^2.2.2"
