--- a/gatsby-material-blog/package.json
+++ b/gatsby-material-blog/package.json
@@ -23,7 +23,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "typeface-cooper-hewitt": "^0.0.44"
+    "typeface-cooper-hewitt": "^0.0.44",
+    "typeface-playfair-display": "^1.1.4"
   },
   "devDependencies": {
     "prettier": "2.0.4"
