--- a/gatsby-theme-blog-material-clarisse/package.json
+++ b/gatsby-theme-blog-material-clarisse/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-theme-blog-material-clarisse",
+  "name": "@tacogator/gatsby-theme-blog-material-clarisse",
   "private": false,
-  "description": "Gatsby blog theme with material-ui",
+  "description": "Gatsby minimalist blog theme with material-ui",
   "version": "0.1.0",
   "author": "@tacogator",
   "dependencies": {
@@ -45,7 +45,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tacogator/gatsby-themes/gatsby-theme-material-clarisse-blog"
+    "url": "https://github.com/tacogator/gatsby-themes"
   },
   "bugs": {
     "url": "https://github.com/tacogator/gatsby-themes/issues"
