--- a/gatsby-theme-blog-material-clarisse/package.json
+++ b/gatsby-theme-blog-material-clarisse/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "gatsby-theme-blog-material-clarisse",
+  "name": "@tacogator/gatsby-theme-blog-material-clarisse",
   "private": false,
-  "description": "Gatsby blog theme with material-ui",
-  "version": "0.1.0",
+  "description": "Gatsby minimalist blog theme with material-ui",
+  "version": "0.1.2",
   "author": "@tacogator",
   "dependencies": {
-    "@lekoarts/gatsby-theme-minimal-blog-core": "^2.2.7",
-    "@material-ui/core": "^4.9.11",
+    "@lekoarts/gatsby-theme-minimal-blog-core": "^2.3.4",
+    "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "gatsby": "^2.20.35",
-    "gatsby-image": "^2.3.5",
+    "gatsby": "^2.21.31",
+    "gatsby-image": "^2.4.3",
     "gatsby-plugin-layout": "^1.3.1",
     "gatsby-plugin-manifest": "^2.3.7",
     "gatsby-plugin-material-ui": "^2.1.8",
@@ -19,9 +19,10 @@
     "gatsby-plugin-typescript": "^2.3.5",
     "gatsby-source-filesystem": "^2.2.5",
     "gatsby-transformer-sharp": "^2.4.7",
+    "mdx-utils": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "typeface-aleo": "^0.0.69",
     "typeface-cooper-hewitt": "^0.0.44",
@@ -45,7 +46,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tacogator/gatsby-themes/gatsby-theme-material-clarisse-blog"
+    "url": "https://github.com/tacogator/gatsby-themes"
   },
   "bugs": {
     "url": "https://github.com/tacogator/gatsby-themes/issues"
