--- a/gatsby-theme-blog-material-clarisse/package.json
+++ b/gatsby-theme-blog-material-clarisse/package.json
@@ -2,13 +2,10 @@
   "name": "@tacogator/gatsby-theme-blog-material-clarisse",
   "private": false,
   "description": "Gatsby minimalist blog theme with material-ui",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "author": "@tacogator",
   "dependencies": {
-    "@lekoarts/gatsby-theme-minimal-blog-core": "^2.3.4",
-    "@material-ui/core": "^4.9.14",
-    "@material-ui/icons": "^4.9.1",
-    "gatsby": "^2.23.1",
+    "@lekoarts/gatsby-theme-minimal-blog-core": "^2.3.5",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-layout": "^1.3.3",
     "gatsby-plugin-manifest": "^2.4.10",
@@ -20,11 +17,7 @@
     "gatsby-transformer-sharp": "^2.5.4",
     "mdx-utils": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "typeface-aleo": "^0.0.69",
-    "typeface-cooper-hewitt": "^0.0.44",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
@@ -49,5 +42,13 @@
   },
   "bugs": {
     "url": "https://github.com/tacogator/gatsby-themes/issues"
+  },
+  "peerDependencies": {
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "typeface-aleo": "^0.0.69",
+    "typeface-cooper-hewitt": "^0.0.44"
   }
 }
