--- a/gatsby-theme-blog-material-clarisse/package.json
+++ b/gatsby-theme-blog-material-clarisse/package.json
@@ -5,23 +5,29 @@
   "version": "0.1.5",
   "author": "@tacogator",
   "dependencies": {
-    "@lekoarts/gatsby-theme-minimal-blog-core": "^2.3.5",
-    "gatsby-image": "^2.4.6",
-    "gatsby-plugin-layout": "^1.3.3",
-    "gatsby-plugin-manifest": "^2.4.10",
+    "@lekoarts/gatsby-theme-minimal-blog-core": "^2.3.6",
+    "gatsby-image": "^2.4.7",
+    "gatsby-plugin-layout": "^1.3.4",
+    "gatsby-plugin-mailchimp": "^5.2.2",
+    "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-material-ui": "^2.1.9",
-    "gatsby-plugin-react-helmet": "^3.3.3",
-    "gatsby-plugin-sharp": "^2.6.10",
-    "gatsby-plugin-typescript": "^2.4.4",
-    "gatsby-source-filesystem": "^2.3.10",
-    "gatsby-transformer-sharp": "^2.5.4",
+    "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-typescript": "^2.4.6",
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-sharp": "^2.5.5",
     "mdx-utils": "^0.2.0",
     "prop-types": "^15.7.2",
     "react-helmet": "^6.0.0",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
-    "prettier": "2.0.4"
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
+    "gatsby": "^2.23.3",
+    "prettier": "2.0.4",
+    "typeface-aleo": "^0.0.69",
+    "typeface-cooper-hewitt": "^0.0.44"
   },
   "keywords": [
     "gatsby"
@@ -46,6 +52,7 @@
   "peerDependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "gatsby": "^2.23.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "typeface-aleo": "^0.0.69",
